--- a/index.html
+++ b/index.html
@@ -4,38 +4,75 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="./styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
         <title>Landing Page</title>
     </head>
 
     <body>
         <div class="header">
-            <img class="header-logo" src="" alt="logo">
-            <ul>
-                <li><a target="_blank" href="/about.html" rel="noopener noreferrer">About</a></li>
-                <li><a target="_blank" href="/projects.html" rel="noopener noreferrer">Projects</a></li>
-                <li><a target="_blank" href="/connect.html" rel="noopener noreferrer">Connect</a></li>
+            <img class="header-logo" src="./images/Copy of Your paragraph text(1).png" alt="logo">
+            <ul class="header-list">
+                <li><a class="header-link" target="_blank" href="./about.html" rel="noopener noreferrer">About</a></li>
+                <li><a class="header-link" target="_blank" href="./projects.html" rel="noopener noreferrer">Projects</a></li>
+                <li><a class="header-link" target="_blank" href="./connect.html" rel="noopener noreferrer">Connect</a></li>
             </ul>
         </div>
 
         <div class="hero">
-
+            <div class="hero-text">
+                <h1 class="hero-header">Agarita Digital Solutions</h1>
+                <p class="hero-description">Welcome to Agarita Digital Solutions. We are your source for cutting-edge software tools and web applications designed primarily for prescribed fire practioners. Sign up for our weekly newsletter to keep up to date with our projects. </p>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <img class="hero-image" src="./images/slash.jpg" alt="juniper burning during a prescribed burn">
         </div>
 
-        <div class="random-info">
-
+        <div class="information">
+            <div class="info-header">
+                <h2 class="header-text">Our Projects</h2>
+            </div>
+            <div class="info-projects">
+                <div class="project">
+                    <a class="project-link"><img class="project-image" src="./images/20220111_121842.jpg" alt="prescribed burn in progess"></a>
+                    <p class="project-text">Prescribed Burn Plan web app/database</p>
+                </div>
+                <div class="project">
+                    <a class="project-link"><img class="project-image" src="./images/20210927_131106.jpg" alt="lighting teh backing fire on a prescribed burn"></a>
+                    <p class="project-text">Rx Burn weather application</p>
+                </div>
+                <div class="project">
+                    <a class="project-link"><img class="project-image" src="./images/coming-soon-4993716_1280.png" alt="Coming soon sign"></a>
+                    <p class="project-text">New project coming soon</p>
+                </div>
+                <div class="project">
+                    <a class="project-link"><img class="project-image" src="./images/coming-soon-4993716_1280.png" alt="Coming soon sign"></a>
+                    <p class="project-text">New project coming soon</p>
+                </div>
+            </div>
         </div>
 
         <div class="quote">
-
+            <blockquote class="fire-quote" cite="https://wildfiretoday.com/2009/12/17/quote-of-the-day/">
+                <p class="quote-text">If we don't burn it when we can control it, it will burn when we can't.</p>
+            </blockquote>
+            <p class="quote-attribution">-Rick Anderson, Everglades NP FMO <cite>Wildfire Today, 2009</cite></p>
+            <blockquote class="fire-quote" cite="https://www.brainyquote.com/quotes/dean_kamen_787189">
+                <p class="quote-text">Every once in a while, a new technology, an old problem, and a big idea turn into an innovation.</p>
+            </blockquote>
+            <p class="quote-attribution">-Dean Kamen</p>
         </div>
 
         <div class="call-to-action">
-
+            <div class="action-text">
+                <h3 class="action-header">Sign up now for our newsletter!</h3>
+                <p class="action-text">Our weekly newsletter will keep you up to date on the projects we are building as well as those already available. You will also be notified when a new article is posted on our blogs. </p>
+            </div>
+            <button class="action-button">Sign up</button>
         </div>
 
         <div class="footer">
-
+            <footer>Copyright &#169; Agarita Digital Solutions 2025</footer>
         </div>
     </body>
 </html>
